pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__014-backslash_escapes.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/014-backslash_escapes.md
---
*not emphasized* <br/> not a tag [not a link](/foo) `not code` 1. not a list *
not a list # not a heading [foo]: /url "not a reference" &ouml; not a character
entity
