pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__021-backslash_escapes.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/021-backslash_escapes.md
---
[32m<a href="/bar\/)">
[0m
